RG-2054 Fix contrast issues in Code

--- a/src/code/highlight.css
+++ b/src/code/highlight.css
@@ -29,13 +29,6 @@
     color: var(--ring-code-meta-color);
   }
 
-  & :global(.hljs-tag) {
-    background: var(--ring-code-tag-background-color);
-    box-shadow:
-      0 1px var(--ring-code-tag-background-color),
-      0 -1px var(--ring-code-tag-background-color);
-  }
-
   & :global(.hljs-section),
   & :global(.hljs-literal),
   & :global(.hljs-keyword),
